--- a/features/base/src/main/translations/values-ku/strings.xml
+++ b/features/base/src/main/translations/values-ku/strings.xml
@@ -76,6 +76,7 @@
     <string name="yes">Erê</string>
     <string name="no">Na</string>
     <string name="cancel">Betal</string>
+    <string name="back">Paş</string>
     <string name="vote">Şîrovekirin</string>
     <string name="mail">E-Mail</string>
     <string name="share">Par</string>
