--- a/features/intro/src/main/translations/values-ku/strings.xml
+++ b/features/intro/src/main/translations/values-ku/strings.xml
@@ -17,4 +17,5 @@
   -->
 <resources>
     <string name="changelog">Çi nû heye?</string>
+    <string name="intro_pager">Tu dikarî çend bajaran wekî ku hûn dixwazin bixwazin</string>
 </resources>
