--- a/features/missedprayers/src/main/translations/values-nl/strings.xml
+++ b/features/missedprayers/src/main/translations/values-nl/strings.xml
@@ -18,4 +18,5 @@
 <resources>
     <string name="fasting">Vasten</string>
     <string name="witr">Witr</string>
+    <string name="morningPrayer">Ochtendgebed</string>
 </resources>
