--- a/features/times/src/main/translations/values-nl/strings.xml
+++ b/features/times/src/main/translations/values-nl/strings.xml
@@ -20,10 +20,15 @@
     <string name="adjAngle">Hoek gebaseerd (hoek/60e nacht)</string>
     <string name="adjMidnight">Middernacht</string>
     <string name="adjTime">Tijd gebaseerd (1/7e nacht)</string>
+    <string name="angle">Hoek</string>
+    <string name="calcMethod">Methode</string>
     <string name="cities">Steden</string>
     <string name="customVolume">Kies volume</string>
     <string name="date">Datum</string>
+    <string name="delCityConfirm">Weet je zeker dat je de stad \"%1$s\" wilt verwijderen?</string>
+    <string name="delAlarmConfirm">Weet je zeker dat je de alarm \"%1$s\" wilt verwijderen?</string>
     <string name="dlSound">“%1$s” (%2$s) Downloaden?</string>
+    <string name="highlatsAdj">Hoge Breedtegraad aanpassing:</string>
     <string name="fixTimezone">Tijdzone +/-:</string>
     <string name="juristicHanafi">Hanafi</string>
     <string name="juristicShafi">Shafi</string>
@@ -34,6 +39,8 @@
     <string name="shareTimes">Gebedstijden van vandaag voor %1$s</string>
     <string name="showMore">Toon meer</string>
     <string name="soundPicker">Kies geluid</string>
+    <string name="filePicker">Kies bestand</string>
+    <string name="other">Overige</string>
     <string name="sun">Zon</string>
     <string name="timeBased">Minuten</string>
     <string name="time">Tijd</string>
@@ -49,6 +56,23 @@
     <string name="addFromCSV">Toevoegen vanuit CSV</string>
     <string name="csvFromFile">Laad CSV van bestand</string>
     <string name="csvFromURL">Laad CSV vanuit URL</string>
+    <string name="asrSani">Asr Sânî</string>
+    <string name="asrAwwal">Asr Awwal</string>
+    <string name="noAdjustment">Geen</string>
+    <string name="customCalc">Aangepast</string>
+    <string name="customCalcDesc">Aangepaste berekenparameters instellen</string>
+    <string name="autoLocation">Auto locatie</string>
+    <string name="stop">Stopzetten</string>
+    <string name="onTime">Op tijd</string>
+    <string name="beforeTime">%1$d minuten eerder</string>
+    <string name="afterTime">%1$d minuten later</string>
+    <string name="addAudio">Nieuw geluid toevoegen</string>
+    <string name="fajrShort">Assalatu Khairum Minan Naum</string>
+    <string name="takbir">Takbir</string>
+    <string name="adhanDua">Adhan Dua</string>
+    <string name="salavat">Salawat</string>
+    <string name="volume">Volume</string>
+    <string name="volumeNotification">Meldingsvolume</string>
     <string name="ongoingNotification">Notificatie widget</string>
     <string name="prayerNotification">Gebedstijd-melding</string>
     <string name="sound">Geluid</string>
