better darkmode + ongoing notification improvements

--- a/features/base/src/main/res/values/strings.xml
+++ b/features/base/src/main/res/values/strings.xml
@@ -124,4 +124,5 @@
     <string name="maghrib">Maghrib</string>
     <string name="ishaa">Ishaa</string>
     <string name="off">Off</string>
+    <string name="clickToDisableNotification">Click here to disable this notification</string>
 </resources>
