proper usage of ForegroundServices

--- a/features/times/src/main/res/values/strings.xml
+++ b/features/times/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="kerahatTime">Makruh Praying Time</string>
     <string name="monthly">Month View</string>
     <string name="newAddCity">Use new City Chooser</string>
-    <string name="oldAddCity">Use manuel City Chooser</string>
+    <string name="oldAddCity">Use manual City Chooser</string>
     <string name="shareTimes">Today\'s Prayertimes for %1$s</string>
     <string name="showMore">Show more</string>
     <string name="soundPicker">Sound Picker</string>
